welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: value unary_! is not a member of Unit
while(!posFinale()){
      ^ColumnByColumn:15: error: not found: value ecritmessage
		ecritmessage();
                ^ColumnByColumn:17: error: value update is not a member of Int
		if(getX()=6){
                   ^